fix: fix home page scrollbar glitching

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -159,9 +159,9 @@
 
 .page {
   padding: 76px 48px;
+  height: 100vh;
   overflow-x: auto;
   overflow-y: scroll;
-  min-height: 100vh;
   color: rgba(#000, 0.85);
   line-height: 1.5;
   font-size: 24px;
